--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +11,10 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+
+ 
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -70,20 +75,36 @@ Tallahassee to write 1,000,000<br>lines of code_</h1>
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
+       <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-user fa-stack-1x fa-inverse"></i>
+        </span>
+
+    
           <h2>Students</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and we'll let you know how to get involved. </p>
+          <p><a class="btn btn-default" href="#" role="button">Start Learning>> </a></p>
         </div>
         <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+        <i class="fa fa-circle fa-stack-2x">
+        </i> <i class="fa fa-pencil fa-stack-1x fa-inverse"></i> 
+        </span>
+
           <h2>Educators</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen.</p>
+          <p><a class="btn btn-default" href="#" role="button">Join the Initiative >></a></p>
        </div>
         <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+        <i class="fa fa-circle fa-stack-2x">
+        </i> <i class="fa fa-money fa-stack-1x fa-inverse"></i> 
+        </span>
+
           <h2>Sponsors</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p> <p><a class="btn btn-default" href="#" role="button">Give Support »</a></p> 
+
         </div>
       </div>
 
