--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,6 +12,7 @@
 <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
+ 
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,47 +71,55 @@ Tallahassee to write 1,000,000<br>lines of code_</h1>
       </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-       <div class="col-md-4">
-        <span class="fa-stack fa-4x">
+<div class="container homepage">
+<img src="images/academy_brand_med.png" title="MASSIVE Academy" alt="MASSIVE Academy">
+  <h2>Who We Are</h2>
+  <hr>
+  <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+</div>
+
+    <div id="get-involved">
+    <div class="container homepage">
+  <h2>Get Involved</h2>
+  <hr>
+  <!-- Example row of columns -->
+  <div class="row">
+    <div class="col-md-4">
+      <span class="fa-stack fa-4x">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-user fa-stack-1x fa-inverse"></i>
-        </span>
+      </span>
+      <h3>Students</h3>
+      <p>Want to learn how to code? Want to help us get to 1,000,000 lines?  Click the button below and we'll let you know how to get involved.</p>
+      <p><a class="btn btn-default" href="#" role="button">Start Learning »</a></p>
+    </div>
+    <div class="col-md-4">
+      <span class="fa-stack fa-4x">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+      </span>
+      <h3>Educators</h3>
+      <p>Want to bring this initiative to your school or institution?  Awesome!  Click the button below and we'll make it happen.</p>
+      <p><a class="btn btn-default" href="#" role="button">Join The Iniative »</a></p>
+    </div>
+    <div class="col-md-4">
+      <span class="fa-stack fa-4x">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-money fa-stack-1x fa-inverse"></i>
+      </span>
+      <h3>Sponsors</h3>
+      <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding.  Click to get involved.</p>
+      <p><a class="btn btn-default" href="#" role="button">Give Support »</a></p>
+    </div>
+  </div>
+  </div> <!-- /container -->
+  </div>
+  <hr>
+  <footer>
+    <p>© Company 2014</p>
+  </footer>
 
-    
-          <h2>Students</h2>
-          <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and we'll let you know how to get involved. </p>
-          <p><a class="btn btn-default" href="#" role="button">Start Learning>> </a></p>
-        </div>
-        <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-        <i class="fa fa-circle fa-stack-2x">
-        </i> <i class="fa fa-pencil fa-stack-1x fa-inverse"></i> 
-        </span>
-          <h2>Educators</h2>
-          <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen.</p>
-          <p><a class="btn btn-default" href="#" role="button">Join the Initiative >></a></p>
-       </div>
-        <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-        <i class="fa fa-circle fa-stack-2x">
-        </i> <i class="fa fa-money fa-stack-1x fa-inverse"></i> 
-        </span>
-          <h2>Sponsors</h2>
-          <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p> <p><a class="btn btn-default" href="#" role="button">Give Support »</a></p> 
-
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2014</p>
-      </footer>
-    </div> <!-- /container -->
-
+ 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
