--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <![endif]-->
   </head>
 
-  <body>
+<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+
+<br>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -42,13 +44,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/top_logo.png" alt="One Million Lines"></a><br>
+          <a class="navbar-brand" href="#jumbotron"><img src="images/top_logo.png" alt="One Million Lines" title="One Million Lines"></a><br>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
 
-<li class=”active”><a href="#about">WHO WE ARE</a></li> 
-<li><a href="#contact">GET INVOLVED</a></li>
+<li><a href="#who">WHO WE ARE</a></li>
+<li><a href="#get-involved">GET INVOLVED</a></li><br>
 
 </ul>
 
@@ -58,7 +60,7 @@
 
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div id="jumbotron" class="jumbotron"><br>
       <div class="container">
      <h1>Our goal is to inspire <br>
 Tallahassee to write 1,000,000<br>lines of code_</h1>
@@ -66,18 +68,26 @@ Tallahassee to write 1,000,000<br>lines of code_</h1>
         <p>All over the country people are taking the 
 	<strong>HOUR OF CODE<strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_.</p>
 
-        <p><a class="btn btn-danger btn-lg" href="#" role="button">Get Involved &raquo;</a></p>
+      <p><a class="btn btn-danger btn-lg" role="button" data-toggle="modal" data-target="#myModal">Learn more »</a></p><br>
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <button type="button" class="close btn btn-danger" data-dismiss="modal" aria-hidden="true">x</button><br>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/29714SBp098" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
         <img src="images/code.png" title="Code.org logo" alt="Code.org">
       </div>
     </div>
-
+<div id="who">
 <div class="container homepage">
 <img src="images/academy_brand_med.png" title="MASSIVE Academy" alt="MASSIVE Academy">
   <h2>Who We Are</h2>
   <hr>
   <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
 </div>
-
+</div>
     <div id="get-involved">
     <div class="container homepage">
   <h2>Get Involved</h2>
@@ -114,19 +124,26 @@ Tallahassee to write 1,000,000<br>lines of code_</h1>
   </div>
   </div> <!-- /container -->
   </div>
-  <hr>
-  <footer>
-    <p>© Company 2014</p>
-  </footer>
 
+ <footer>
+      <div class="container">
+        <p><img src="images/one_million_bottom_brand.png"></p>
+      </div>
+      <div id="back-to-top">
+        <a href="#jumbotron"><i class="fa fa-chevron-circle-up fa-3x"></i></a>
+      </div>
+    </footer><br>
  
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+     <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script><br>
+
+    
   </body>
 </html>
+
+ 
